# Supercritical

./: .cproject  .project  CMakeLists.txt  Doxyfile  README.md
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
lib/: CMakeLists.txt
lib/lib/core/: io.bc  io.cpp  math.bc  math.cpp
src/: Array.cpp  Array.h  Assignment.cpp  Assignment.h  AstNode.cpp  AstNode.h  BinaryOperator.cpp  BinaryOperator.h  CMakeLists.txt  ClassDeclaration.cpp  ClassDeclaration.h  CodeGenContext.cpp  CodeGenContext.h  CompareOperator.cpp  CompareOperator.h  Conditional.cpp  Conditional.h  Declaration.cpp  Declaration.h  FunctionDeclaration.cpp  FunctionDeclaration.h  MethodCall.cpp  MethodCall.h  Range.cpp  Range.h  Return.cpp  Return.h  UnaryOperator.cpp  UnaryOperator.h  Visitor.h  VisitorPrettyPrint.cpp  VisitorPrettyPrint.h  VisitorSyntaxCheck.cpp  VisitorSyntaxCheck.h  WhileLoop.cpp  WhileLoop.h  main.cpp  parser.y  tokens.l
test_samples/: incl  incl.crit  incl.ll  test  test.crit  test.ll  test_array  test_array.crit  test_array.ll  test_class  test_class.crit  test_class.ll  test_class_ctor  test_class_ctor.crit  test_class_ctor.ll  test_class_member_init  test_class_member_init.crit  test_class_member_init.ll  test_crash  test_crash.crit  test_crash.ll  test_double  test_double.crit  test_double.ll  test_full  test_full.crit  test_full.ll  test_func_var_args  test_func_var_args.crit  test_func_var_args.ll  test_gep  test_gep.crit  test_gep.ll  test_if  test_if.crit  test_if.ll  test_import  test_import.crit  test_import.ll  test_input  (+6 more)
(+5 files in other folders)
